updated notebooks+images to fix bbox cutoff

--- a/examples/Epidemiology_with_quarantine_event.ipynb
+++ b/examples/Epidemiology_with_quarantine_event.ipynb
@@ -114,8 +114,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 486 ms, sys: 10.9 ms, total: 497 ms\n",
-      "Wall time: 484 ms\n"
+      "CPU times: user 480 ms, sys: 5.83 ms, total: 485 ms\n",
+      "Wall time: 461 ms\n"
      ]
     }
    ],
@@ -170,7 +170,7 @@
     "plt.xticks(fontsize=8)\n",
     "plt.yticks(fontsize=8)\n",
     "plt.legend(loc='best', fontsize=8)\n",
-    "plt.savefig('epidemiology_with_quarantine.pdf')"
+    "plt.savefig('../images/Epidemiology_with_quarantine_event.pdf', bbox_inches='tight')"
    ]
   },
   {
