--- a/examples/Michaelis-Menten_SSA_C.ipynb
+++ b/examples/Michaelis-Menten_SSA_C.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -123,7 +123,7 @@
     "plt.xticks(fontsize=8)\n",
     "plt.yticks(fontsize=8)\n",
     "plt.legend(loc='best', fontsize=8)\n",
-    "plt.savefig('../images/MichaelisMenten.pdf', bbox_inches='tight')\n",
+    "plt.savefig('../images/MichaelisMenten.png', bbox_inches='tight')\n",
     "\n"
    ]
   },
