--- a/performance/Compare_to_Stochkit.ipynb
+++ b/performance/Compare_to_Stochkit.ipynb
@@ -89,7 +89,7 @@
     " 'TauLeapingCSolver': gillespy2.solvers.cpp.tau_leaping_c_solver.TauLeapingCSolver,\n",
     " 'TauLeapingSolver': gillespy2.solvers.numpy.tau_leaping_solver.TauLeapingSolver,\n",
     " 'StochKit' : gillespy2.solvers.stochkit.StochKitSolver\n",
-    "}\n"
+    "}pref_counter\n"
    ]
   },
   {
@@ -268,6 +268,87 @@
     "            print(f\"\\t{sol} {e}\")\n",
     "            \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "create_decay: Example\n",
+      "Popen(/tmp/gillespy2_build_es026dg1/GillesPy2_Simulation.out --trajectories 1 --timesteps 101 --tau_tol 0.03 --end 20.0 --interval 101 , platform_args={'start_new_session': True}\n",
+      "_handle_return_code return_code=0\n",
+      "\tTauHybridCSolver 15.17487370299932\n",
+      "create_degradation: Degradation\n",
+      "Popen(/tmp/gillespy2_build_7vm_1w3g/GillesPy2_Simulation.out --trajectories 1 --timesteps 151 --tau_tol 0.03 --end 150 --interval 151 , platform_args={'start_new_session': True}\n",
+      "_handle_return_code return_code=0\n",
+      "\tTauHybridCSolver 18.997044151008595\n",
+      "create_dimerization: Dimerization\n",
+      "Popen(/tmp/gillespy2_build_b6_zqw2d/GillesPy2_Simulation.out --trajectories 1 --timesteps 101 --tau_tol 0.03 --end 100.0 --interval 101 , platform_args={'start_new_session': True}\n",
+      "_handle_return_code return_code=0\n",
+      "\tTauHybridCSolver 19.43916858099692\n",
+      "create_michaelis_menten: Michaelis_Menten\n",
+      "Popen(/tmp/gillespy2_build_w0rol3rj/GillesPy2_Simulation.out --trajectories 1 --timesteps 101 --tau_tol 0.03 --end 100.0 --interval 101 , platform_args={'start_new_session': True}\n",
+      "_handle_return_code return_code=0\n",
+      "\tTauHybridCSolver 19.39437101999647\n",
+      "create_multi_firing_event: Example\n",
+      "Popen(/tmp/gillespy2_build_af7lj69j/GillesPy2_Simulation.out --trajectories 1 --timesteps 181 --tau_tol 0.03 --end 60.0 --interval 181 , platform_args={'start_new_session': True}\n",
+      "_handle_return_code return_code=0\n",
+      "\tTauHybridCSolver 19.203276786007336\n",
+      "create_robust_model: test1\n",
+      "\tTauHybridCSolver Could not run Model, SBML Features not supported by TauHybridCSolver: AssignmentRule, FunctionDefinition\n",
+      "create_schlogl: Schlogl\n",
+      "Popen(/tmp/gillespy2_build_mww0y11l/GillesPy2_Simulation.out --trajectories 1 --timesteps 100 --tau_tol 0.03 --end 100000.0 --interval 100 , platform_args={'start_new_session': True}\n",
+      "_handle_return_code return_code=0\n",
+      "\tTauHybridCSolver 18.932991815992864\n",
+      "create_toggle_switch: Toggle_Switch\n",
+      "Popen(/tmp/gillespy2_build_wi413lo6/GillesPy2_Simulation.out --trajectories 1 --timesteps 251 --tau_tol 0.03 --end 250.0 --interval 251 , platform_args={'start_new_session': True}\n",
+      "_handle_return_code return_code=0\n",
+      "\tTauHybridCSolver 19.19478103199799\n",
+      "create_trichloroethylene: Trichloroethylene\n",
+      "Popen(/tmp/gillespy2_build_29gn9ze7/GillesPy2_Simulation.out --trajectories 1 --timesteps 100 --tau_tol 0.03 --end 10000.0 --interval 100 , platform_args={'start_new_session': True}\n",
+      "_handle_return_code return_code=0\n",
+      "\tTauHybridCSolver 19.501264292994165\n",
+      "create_tyson_2_state_oscillator: tyson-2-state\n",
+      "Popen(/tmp/gillespy2_build_ioc8fctt/GillesPy2_Simulation.out --trajectories 1 --timesteps 101 --tau_tol 0.03 --end 100.0 --interval 101 , platform_args={'start_new_session': True}\n",
+      "_handle_return_code return_code=0\n",
+      "\tTauHybridCSolver 52.588522158999695\n",
+      "create_vilar_oscillator: VilarOscillator\n",
+      "Popen(/tmp/gillespy2_build_twmjt93k/GillesPy2_Simulation.out --trajectories 1 --timesteps 201 --tau_tol 0.03 --end 200.0 --interval 201 , platform_args={'start_new_session': True}\n",
+      "_handle_return_code return_code=1\n",
+      "\tTauHybridCSolver Loop over integrate exceeded, problem space is too stiff\n"
+     ]
+    }
+   ],
+   "source": [
+    "for m in all_example_models:\n",
+    "    print(f\"{m}\",end=': ')\n",
+    "    model = eval(f\"example_models.{m}()\")\n",
+    "    print(model.name)\n",
+    "    for sol in ['TauHybridCSolver']:\n",
+    "        try:\n",
+    "            print(f\"\\t{sol} {time_run_solver(sol,model)}\")\n",
+    "        except Exception as e:\n",
+    "            print(f\"\\t{sol} {e}\")\n",
+    "            \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
