Updated Vilar performance figure with corrected TauHybrid (python) solver

--- a/performance/Compare_to_Stochkit.ipynb
+++ b/performance/Compare_to_Stochkit.ipynb
@@ -345,10 +345,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['create_decay',\n",
+       " 'create_degradation',\n",
+       " 'create_dimerization',\n",
+       " 'create_michaelis_menten',\n",
+       " 'create_multi_firing_event',\n",
+       " 'create_robust_model',\n",
+       " 'create_schlogl',\n",
+       " 'create_toggle_switch',\n",
+       " 'create_trichloroethylene',\n",
+       " 'create_tyson_2_state_oscillator',\n",
+       " 'create_vilar_oscillator']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_example_models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Popen(/tmp/gillespy2_build_ab297xly/GillesPy2_Simulation.out --trajectories 1 --timesteps 201 --tau_tol 0.03 --end 200.0 --interval 201 , platform_args={'start_new_session': True}\n",
+      "_handle_return_code return_code=0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "27.51365644800535"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "time_run_solver('TauHybridCSolver',example_models.create_vilar_oscillator())"
+   ]
   },
   {
    "cell_type": "code",
