added comments to epidemiology model to match paper notation

--- a/examples/Epidemiology_with_quarantine_event.ipynb
+++ b/examples/Epidemiology_with_quarantine_event.ipynb
@@ -38,14 +38,14 @@
     "        self.volume = 1\n",
     "\n",
     "        # Parameters\n",
-    "        self.add_parameter(Parameter(name=\"exposure\", expression=2.6725769102923615e-07))\n",
-    "        self.add_parameter(Parameter(name=\"exposure_0\", expression=2.6725769102923615e-07))\n",
-    "        self.add_parameter(Parameter(name=\"infect\", expression=0.2862670529638084))\n",
-    "        self.add_parameter(Parameter(name=\"progress\", expression=0.350641470244625))\n",
-    "        self.add_parameter(Parameter(name=\"recovery\", expression=1.650750787134925))\n",
-    "        self.add_parameter(Parameter(name=\"silent_recovery\", expression=1.313225037020145))\n",
-    "        self.add_parameter(Parameter(name=\"death\", expression=0.03605770636882821))\n",
-    "        self.add_parameter(Parameter(name=\"qrate\", expression=0.5499237128381103))\n",
+    "        self.add_parameter(Parameter(name=\"exposure\", expression=2.6725769102923615e-07)) #k_e\n",
+    "        self.add_parameter(Parameter(name=\"exposure_0\", expression=2.6725769102923615e-07)) #k_e0\n",
+    "        self.add_parameter(Parameter(name=\"infect\", expression=0.2862670529638084)) #k_i\n",
+    "        self.add_parameter(Parameter(name=\"progress\", expression=0.350641470244625)) #k_p\n",
+    "        self.add_parameter(Parameter(name=\"recovery\", expression=1.650750787134925)) #k_r\n",
+    "        self.add_parameter(Parameter(name=\"silent_recovery\", expression=1.313225037020145)) #k_s\n",
+    "        self.add_parameter(Parameter(name=\"death\", expression=0.03605770636882821)) #k_d\n",
+    "        self.add_parameter(Parameter(name=\"qrate\", expression=0.5499237128381103)) #q\n",
     "        self.add_parameter(Parameter(name=\"prate\", expression=0.5810587750454265))\n",
     "\n",
     "        # Species\n",
@@ -58,19 +58,28 @@
     "        self.add_species(Species(name=\"dead\", initial_value=0))\n",
     "\n",
     "        # Reactions\n",
+    "        #R_1\n",
     "        self.add_reaction(Reaction(name=\"hie\", reactants={'susceptible': 1, 'infected': 1}, products={'infected': 1, 'exposed': 1}, rate='exposure'))\n",
+    "        #R_2\n",
     "        self.add_reaction(Reaction(name=\"hse\", reactants={'susceptible': 1, 'symptomatic':1}, products={'exposed':1, 'symptomatic': 1}, rate='exposure'))\n",
+    "        #R_3\n",
     "        self.add_reaction(Reaction(name=\"e_to_i\", reactants={'exposed': 1}, products={'infected': 1}, rate=\"infect\"))\n",
+    "        #R_4\n",
     "        self.add_reaction(Reaction(name=\"i_to_s\", reactants={'infected': 1}, products={'symptomatic': 1}, rate=\"progress\"))\n",
+    "        #R_5\n",
     "        self.add_reaction(Reaction(name=\"i_to_c\", reactants={'infected': 1}, products={'cleared': 1}, rate=\"silent_recovery\"))\n",
+    "        #R_6\n",
     "        self.add_reaction(Reaction(name=\"s_to_r\", reactants={'symptomatic': 1}, products={'recovered': 1}, rate=\"recovery\"))\n",
+    "        #R_7\n",
     "        self.add_reaction(Reaction(name=\"s_to_d\", reactants={'symptomatic': 1}, products={'dead': 1}, rate=\"death\"))\n",
     "\n",
     "        # Events\n",
-    "        quarantinet = EventTrigger(expression=\"t >= 20\", initial_value=False, persistent=False)\n",
-    "        quarantinea1 = EventAssignment(variable=self.listOfParameters[\"exposure\"], expression=\"exposure_0 * qrate\")\n",
+    "        # lockdown start\n",
+    "        quarantinet = EventTrigger(expression=\"t >= 20\", initial_value=False, persistent=False) #e1trigger\n",
+    "        quarantinea1 = EventAssignment(variable=self.listOfParameters[\"exposure\"], expression=\"exposure_0 * qrate\") #e1action\n",
     "        self.add_event(Event(name=\"lockdown_start\", trigger=quarantinet, assignments=[quarantinea1], delay=None, priority=\"0\", use_values_from_trigger_time=False))\n",
     "\n",
+    "        # lockdown end (reopen)\n",
     "        phase_1t = EventTrigger(expression=\"t>= 70\", initial_value=False, persistent=False)\n",
     "        phase_1a1 = EventAssignment(variable=self.listOfParameters[\"exposure\"], expression=\"exposure_0 * prate\")\n",
     "        self.add_event(Event(name=\"reopen_start\", trigger=phase_1t, assignments=[phase_1a1], delay=None, priority=\"0\", use_values_from_trigger_time=False))\n",
@@ -187,7 +196,7 @@
    "lastKernelId": null
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -201,7 +210,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
