--- a/performance/Table2--Compare_to_Stochkit.ipynb
+++ b/performance/Table2--Compare_to_Stochkit.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,12 +89,12 @@
     " 'TauLeapingCSolver': gillespy2.solvers.cpp.tau_leaping_c_solver.TauLeapingCSolver,\n",
     " 'TauLeapingSolver': gillespy2.solvers.numpy.tau_leaping_solver.TauLeapingSolver,\n",
     " 'StochKit' : gillespy2.solvers.stochkit.StochKitSolver\n",
-    "}pref_counter\n"
+    "}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,47 +286,27 @@
      "output_type": "stream",
      "text": [
       "create_decay: Example\n",
-      "Popen(/tmp/gillespy2_build_es026dg1/GillesPy2_Simulation.out --trajectories 1 --timesteps 101 --tau_tol 0.03 --end 20.0 --interval 101 , platform_args={'start_new_session': True}\n",
-      "_handle_return_code return_code=0\n",
-      "\tTauHybridCSolver 15.17487370299932\n",
+      "\tTauHybridCSolver 11.81314951099921\n",
       "create_degradation: Degradation\n",
-      "Popen(/tmp/gillespy2_build_7vm_1w3g/GillesPy2_Simulation.out --trajectories 1 --timesteps 151 --tau_tol 0.03 --end 150 --interval 151 , platform_args={'start_new_session': True}\n",
-      "_handle_return_code return_code=0\n",
-      "\tTauHybridCSolver 18.997044151008595\n",
+      "\tTauHybridCSolver 12.658197885000845\n",
       "create_dimerization: Dimerization\n",
-      "Popen(/tmp/gillespy2_build_b6_zqw2d/GillesPy2_Simulation.out --trajectories 1 --timesteps 101 --tau_tol 0.03 --end 100.0 --interval 101 , platform_args={'start_new_session': True}\n",
-      "_handle_return_code return_code=0\n",
-      "\tTauHybridCSolver 19.43916858099692\n",
+      "\tTauHybridCSolver 12.081805883004563\n",
       "create_michaelis_menten: Michaelis_Menten\n",
-      "Popen(/tmp/gillespy2_build_w0rol3rj/GillesPy2_Simulation.out --trajectories 1 --timesteps 101 --tau_tol 0.03 --end 100.0 --interval 101 , platform_args={'start_new_session': True}\n",
-      "_handle_return_code return_code=0\n",
-      "\tTauHybridCSolver 19.39437101999647\n",
+      "\tTauHybridCSolver 12.880090772996482\n",
       "create_multi_firing_event: Example\n",
-      "Popen(/tmp/gillespy2_build_af7lj69j/GillesPy2_Simulation.out --trajectories 1 --timesteps 181 --tau_tol 0.03 --end 60.0 --interval 181 , platform_args={'start_new_session': True}\n",
-      "_handle_return_code return_code=0\n",
-      "\tTauHybridCSolver 19.203276786007336\n",
+      "\tTauHybridCSolver 12.38175352899998\n",
       "create_robust_model: test1\n",
       "\tTauHybridCSolver Could not run Model, SBML Features not supported by TauHybridCSolver: AssignmentRule, FunctionDefinition\n",
       "create_schlogl: Schlogl\n",
-      "Popen(/tmp/gillespy2_build_mww0y11l/GillesPy2_Simulation.out --trajectories 1 --timesteps 100 --tau_tol 0.03 --end 100000.0 --interval 100 , platform_args={'start_new_session': True}\n",
-      "_handle_return_code return_code=0\n",
-      "\tTauHybridCSolver 18.932991815992864\n",
+      "\tTauHybridCSolver 11.81887736000499\n",
       "create_toggle_switch: Toggle_Switch\n",
-      "Popen(/tmp/gillespy2_build_wi413lo6/GillesPy2_Simulation.out --trajectories 1 --timesteps 251 --tau_tol 0.03 --end 250.0 --interval 251 , platform_args={'start_new_session': True}\n",
-      "_handle_return_code return_code=0\n",
-      "\tTauHybridCSolver 19.19478103199799\n",
+      "\tTauHybridCSolver 12.203834460997314\n",
       "create_trichloroethylene: Trichloroethylene\n",
-      "Popen(/tmp/gillespy2_build_29gn9ze7/GillesPy2_Simulation.out --trajectories 1 --timesteps 100 --tau_tol 0.03 --end 10000.0 --interval 100 , platform_args={'start_new_session': True}\n",
-      "_handle_return_code return_code=0\n",
-      "\tTauHybridCSolver 19.501264292994165\n",
+      "\tTauHybridCSolver 12.153125283999543\n",
       "create_tyson_2_state_oscillator: tyson-2-state\n",
-      "Popen(/tmp/gillespy2_build_ioc8fctt/GillesPy2_Simulation.out --trajectories 1 --timesteps 101 --tau_tol 0.03 --end 100.0 --interval 101 , platform_args={'start_new_session': True}\n",
-      "_handle_return_code return_code=0\n",
-      "\tTauHybridCSolver 52.588522158999695\n",
+      "\tTauHybridCSolver 16.277154256997164\n",
       "create_vilar_oscillator: VilarOscillator\n",
-      "Popen(/tmp/gillespy2_build_twmjt93k/GillesPy2_Simulation.out --trajectories 1 --timesteps 201 --tau_tol 0.03 --end 200.0 --interval 201 , platform_args={'start_new_session': True}\n",
-      "_handle_return_code return_code=1\n",
-      "\tTauHybridCSolver Loop over integrate exceeded, problem space is too stiff\n"
+      "\tTauHybridCSolver 37.6206167929995\n"
      ]
     }
    ],
@@ -342,6 +322,95 @@
     "            print(f\"\\t{sol} {e}\")\n",
     "            \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "create_decay: Example\n",
+      "\tTauHybridSolver 0.049044840001442935\n",
+      "create_degradation: Degradation\n",
+      "\tTauHybridSolver 0.0833163900024374\n",
+      "create_dimerization: Dimerization\n",
+      "\tTauHybridSolver 0.06784714000241365\n",
+      "create_michaelis_menten: Michaelis_Menten\n",
+      "\tTauHybridSolver 0.6543032900008257\n",
+      "create_multi_firing_event: Example\n",
+      "\tTauHybridSolver 0.27892439599963836\n",
+      "create_robust_model: test1\n",
+      "\tTauHybridSolver 0.32762315300351474\n",
+      "create_schlogl: Schlogl\n",
+      "\tTauHybridSolver 0.1047285929962527\n",
+      "create_toggle_switch: Toggle_Switch\n",
+      "\tTauHybridSolver 1.0901560409984086\n",
+      "create_trichloroethylene: Trichloroethylene\n",
+      "\tTauHybridSolver 0.3973693230000208\n",
+      "create_tyson_2_state_oscillator: tyson-2-state\n",
+      "\tTauHybridSolver 347.91038688999834\n",
+      "create_vilar_oscillator: VilarOscillator\n",
+      "\tTauHybridSolver 296.706265144996\n"
+     ]
+    }
+   ],
+   "source": [
+    "for m in all_example_models:\n",
+    "    print(f\"{m}\",end=': ')\n",
+    "    model = eval(f\"example_models.{m}()\")\n",
+    "    print(model.name)\n",
+    "    for sol in ['TauHybridSolver']:\n",
+    "        try:\n",
+    "            print(f\"\\t{sol} {time_run_solver(sol,model)}\")\n",
+    "        except Exception as e:\n",
+    "            print(f\"\\t{sol} {e}\")\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
