Updated Photosynthesis figure and performance figure

--- a/examples/Figure3--Photosynthesis.ipynb
+++ b/examples/Figure3--Photosynthesis.ipynb
@@ -10770,7 +10770,7 @@
     "plt.legend(fontsize=18,loc=\"lower right\")\n",
     "plt.ylabel('Population', fontsize=22)\n",
     "plt.xlabel('Time', fontsize=22)\n",
-    "plt.savefig('GillesPy2_photosynthesis_ex.pdf')"
+    "plt.savefig('../images/GillesPy2_photosynthesis_ex.pdf')"
    ]
   },
   {
